# guiniverse

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  docker.sh  dockerfile  package.xml
guiniverse/: CMakeLists.txt
guiniverse/include/guiniverse/: imgui_utils.hpp
guiniverse/include/guiniverse/ControlGui/: JoystickInput.hpp  RobotController.hpp
guiniverse/include/guiniverse/ImageSystem/: ImageSystem.hpp
guiniverse/include/guiniverse/N10/: N10.hpp
guiniverse/include/guiniverse/Quac/: Quac.hpp
guiniverse/launch/: rover.launch.py
guiniverse/scripts/: build.bash
guiniverse/src/: imgui_utils.cpp  main.cpp
guiniverse/src/ControlGui/: Console.cpp  ControlGui.cpp  JoystickInput.cpp
guiniverse/src/Idefix/: Idefix.cpp  onFrame.cpp
guiniverse/src/ImageSystem/: ImageSystem.cpp  ImageSystemBackendGST.cpp  ImageSystemBackendROS.cpp
guiniverse/src/N10/: onFrame.cpp  onGuiFrame.cpp
guiniverse/src/Quac/: Quac.cpp  onFrame.cpp  onGuiFrame.cpp
include/guiniverse/: DataCaptureSystem.hpp  GSTImageSystem.hpp  ImageSystem.hpp  QRCodeDecoder.hpp  data_capture_system.hpp  image.hpp  imgui.hpp  imgui_util.hpp  imgui_utils.hpp  input.hpp  node.hpp  robot_controller.hpp  ros.hpp  ros2_imgui_integration.hpp  rover_controller.hpp  shared_data.hpp  terminal.hpp
include/guiniverse/ControlGui/: Console.hpp  ControlGui.hpp  JoystickInput.hpp  RobotController.hpp
include/guiniverse/Idefix/: Idefix.hpp
include/guiniverse/ImageSystem/: ImageSystem.hpp  ImageSystemBackend.hpp  ImageSystemBackendGST.hpp  ImageSystemBackendROS.hpp
include/guiniverse/N10/: N10.hpp
include/guiniverse/NoName/: NoName.hpp
include/guiniverse/control_gui/: console.hpp  control_gui.hpp  joystick_input.hpp  robot_controller.hpp
include/guiniverse/idefix/: idefix.hpp
include/guiniverse/image_system/: image_system.hpp  image_system_backend_gst.hpp  image_system_backend_ros.hpp
include/guiniverse/n10/: n10.hpp
include/guiniverse/no_name/: no_name.hpp
scripts/: build.bash
src/: DataCaptureSystem.cpp  GSTImageSystem.cpp  ImageSystem.cpp  QRCodeDecoder.cpp  communication.cpp  data_capture_system.cpp  image.cpp  imgui.cpp  imgui_util.cpp  imgui_utils.cpp  input.cpp  main.cpp  node.cpp  robot_controller.cpp  ros.cpp  rover_controller.cpp  shared_data.cpp  terminal.cpp
src/ControlGui/: Console.cpp  ControlGui.cpp  JoystickInput.cpp  RobotController.cpp  gui.cpp  robot_controllers.cpp
src/Idefix/: Idefix.cpp  onFrame.cpp  onGuiFrame.cpp
src/ImageSystem/: ImageSystem.cpp  ImageSystemBackendGST.cpp  ImageSystemBackendROS.cpp
src/N10/: N10.cpp  onFrame.cpp  onGuiFrame.cpp
src/NoName/: NoName.cpp  onFrame.cpp  onGuiFrame.cpp
src/control_gui/: console.cpp  control_gui.cpp  gui.cpp  joystick_input.cpp
src/idefix/: idefix.cpp  on_frame.cpp  on_gui_frame.cpp
src/image_system/: image_system.cpp  image_system_backend_gst.cpp  image_system_backend_ros.cpp
src/n10/: n10.cpp  on_frame.cpp  on_gui_frame.cpp
src/no_name/: no_name.cpp  on_frame.cpp  on_gui_frame.cpp
